WIFIFOREU-2424 correct alignment of labels with too many characters

--- a/wifi4eu-portal/wifi4eu-portal-web/src/main/angular/src/styles.scss
+++ b/wifi4eu-portal/wifi4eu-portal-web/src/main/angular/src/styles.scss
@@ -1679,3 +1679,34 @@ input.email_profile::-ms-clear{
   padding-top: 1.9em;
   padding-bottom: 0.9em;
 }
+
+#nav-bar{
+  height:100%;
+  min-height: 55px;
+}
+
+#top-menu {
+  min-height: 55px;
+  display:flex;
+}
+
+#top-menu > ul > li{
+  max-width: 70vw;
+  float:none;
+  vertical-align:top;
+}
+
+@media only screen and (max-width: 1154px) {
+  #top-menu > ul > li{
+    max-width: 31vw;
+    height:100%;
+    min-height: 55px;
+ }
+
+#top-menu > ul > li > a {
+  height: 100%;
+}
+
+#top-menu ul, #top-menu ul li, #top-menu ul li a{
+  display: inline-block;
+}
